--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
-    <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
-    </welcome-file-list>
     <servlet>
-        <servlet-name>ControllerLogin</servlet-name>
-        <servlet-class>com.stronquens.amgtwitter.ControllerLogin</servlet-class>
+        <servlet-name>ControllerOAuth</servlet-name>
+        <servlet-class>com.stronquens.amgtwitter.ControllerOAuth</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ControllerTwitter</servlet-name>
+        <servlet-class>com.stronquens.amgtwitter.ControllerTwitter</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>ControllerLogin</servlet-name>
+        <servlet-name>ControllerOAuth</servlet-name>
         <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ControllerTwitter</servlet-name>
+        <url-pattern>/twitter</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
